# QED-Adamant

./: Atom.py  DataStore.py  DataStoreObserver.py  LICENSE  Molecule.py  README.md  Simulation.py  addMITheader.py  atom.py  condmonObserver.py  constants.py  dataStoreObserver.py  datastoreObserver.py  eigenvector.py  electron.py  main.py  molecule.py  moleculeFactory.py  mongodbi.py  observer.py  particle.py  perfmonObserver.py  requirements.txt  schema.json  scratch_4.py  simulation.py  utility.py  visualization.py  visualization_data.py  visualizationdata.py  visualizationi.py
.github/: pyproject.toml
